# zerch

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.api  README.md  docker-compose.yml  drain3_wrapper.py  nginx.conf
crates/zerch-api/: Cargo.toml  README.md
crates/zerch-api/src/: main.rs  summarize.rs
crates/zerch-core/: Cargo.toml  README.md
crates/zerch-core/src/: lib.rs
crates/zerch-embed/: Cargo.toml  README.md
crates/zerch-embed/src/: downloader.rs  lib.rs  model.rs
crates/zerch-engine/: Cargo.toml  README.md
crates/zerch-engine/src/: main.rs
crates/zerch-storage/: Cargo.toml  README.md
crates/zerch-storage/src/: lib.rs  store.rs
ui/: Dockerfile
ui/src/: App.css  App.jsx  index.css
ui/src/components/: IncidentDetails.css  LogPanel.css  RightPanel.css  RightPanel.jsx  SearchPanel.css  SearchPanel.jsx  SearchResultsPanel.css  SearchResultsPanel.jsx  Topbar.css  Topbar.jsx  UploadSection.css  UploadSection.jsx
ui/src/config/: api.js
ui/src/context/: AuthContext.jsx
ui/src/hooks/: useNavigate.js
ui/src/pages/: DashboardPage.jsx  LandingPage.css  LandingPage.jsx  LiveLogsPage.css  LiveLogsPage.jsx  LoginPage.css  LoginPage.jsx
