[package]
name = "zerch-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for semantic log search"
license = "MIT"
repository = "https://github.com/sagnik222/Zerch"
homepage = "https://github.com/sagnik222/Zerch"

[dependencies]
zerch-embed = "0.1.0"
zerch-storage = "0.1.0"
zerch-core = "0.1.0"
actix-web = "4.4"
actix-rt = "2.9"
actix-multipart = "0.4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1"