[package]
name = "zerch-embed"
version = "0.1.0"
edition = "2021"
description = "Local embedding model using ONNX Runtime"
license = "MIT"
repository = "https://github.com/sagnik222/Zerch"
homepage = "https://github.com/sagnik222/Zerch"

[dependencies]
hf-hub = "0.4"
anyhow = "1.0"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
tokenizers = "0.19"
ndarray = "0.17"
